--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
 
 [tool.mccole]
 skips = ["CLAUDE.md", "templates", "unused"]
+links = "links.md"
 
 [tool.mccole.renames]
 "CODE_OF_CONDUCT.md" = "code_of_conduct.md"
